TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Decls
Rule 2     Program -> Decls Body
Rule 3     Program -> Body
Rule 4     Decls -> Declaration Decls
Rule 5     Decls -> Declaration
Rule 6     Body -> Assignment Body
Rule 7     Body -> Statement Body
Rule 8     Body -> Assignment
Rule 9     Body -> Statement
Rule 10    Declaration -> INT ID
Rule 11    Declaration -> INT ID KEEPS Expression
Rule 12    Declaration -> ARRAY ID
Rule 13    Declaration -> ARRAY ID LPAREN Num RPAREN
Rule 14    Declaration -> ARRAY ID KEEPS LBRACKET List RBRACKET
Rule 15    Declaration -> ARRAY ID KEEPS ID
Rule 16    Declaration -> ARRAY ID KEEPS SEARCH ID LPAREN Expression RPAREN
Rule 17    Declaration -> MATRIX ID
Rule 18    Declaration -> MATRIX ID LPAREN Num COMMA Num RPAREN
Rule 19    Declaration -> MATRIX ID KEEPS LBRACKET Matrix RBRACKET
Rule 20    Declaration -> MATRIX ID KEEPS ID
Rule 21    Assignment -> ID KEEPS Expression
Rule 22    Assignment -> ID KEEPS LBRACKET List RBRACKET
Rule 23    Assignment -> ID LPAREN Expression RPAREN KEEPS Expression
Rule 24    Assignment -> ID KEEPS LBRACKET Matrix RBRACKET
Rule 25    Assignment -> ID LPAREN Expression COMMA Expression RPAREN KEEPS Expression
Rule 26    Assignment -> ID LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
Rule 27    Assignment -> ID PLUS PLUS
Rule 28    Assignment -> ID MINUS MINUS
Rule 29    Assignment -> ID LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
Rule 30    Assignment -> ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
Rule 31    Assignment -> ID LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
Rule 32    Assignment -> ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
Rule 33    List -> Num COMMA List
Rule 34    List -> Num
Rule 35    List -> <empty>
Rule 36    Matrix -> LBRACKET List RBRACKET COMMA Matrix
Rule 37    Matrix -> LBRACKET List RBRACKET
Rule 38    Matrix -> <empty>
Rule 39    Num -> NUM
Rule 40    Num -> NEGATIVE NUM
Rule 41    Expression -> Num
Rule 42    Expression -> ID
Rule 43    Expression -> INPUT
Rule 44    Expression -> Operation
Rule 45    Expression -> SEARCH ID LPAREN Expression RPAREN
Rule 46    Expression -> SEARCH ID LPAREN Expression COMMA Expression RPAREN
Rule 47    Operation -> Expression PLUS Expression
Rule 48    Operation -> Expression MINUS Expression
Rule 49    Operation -> Expression TIMES Expression
Rule 50    Operation -> Expression DIVIDED_BY Expression
Rule 51    Operation -> Expression REMAINDER Expression
Rule 52    Statement -> If
Rule 53    Statement -> While_Do
Rule 54    Statement -> Repeat_Until
Rule 55    Statement -> For_Do
Rule 56    Statement -> Output
Rule 57    If -> IF Comparison LBRACE Body RBRACE END
Rule 58    If -> IF Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
Rule 59    While_Do -> WHILE Comparison DO LBRACE Body RBRACE END
Rule 60    Repeat_Until -> REPEAT LBRACE Body RBRACE UNTIL Comparison END
Rule 61    For_Do -> FOR LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END
Rule 62    Output -> OUTPUT TEXT
Rule 63    Output -> OUTPUT ID
Rule 64    Output -> OUTPUT Num
Rule 65    Output -> OUTPUT LBRACKET List RBRACKET
Rule 66    Output -> OUTPUT LBRACKET Matrix RBRACKET
Rule 67    Comparison -> NOT Comparison
Rule 68    Comparison -> LPAREN Expression EQUAL Expression RPAREN
Rule 69    Comparison -> LPAREN Expression NOT_EQUAL Expression RPAREN
Rule 70    Comparison -> LPAREN Expression GREATER Expression RPAREN
Rule 71    Comparison -> LPAREN Expression GREATER_EQUAL Expression RPAREN
Rule 72    Comparison -> LPAREN Expression LOWER Expression RPAREN
Rule 73    Comparison -> LPAREN Expression LOWER_EQUAL Expression RPAREN
Rule 74    Comparison -> LPAREN Comparison AND Comparison RPAREN
Rule 75    Comparison -> LPAREN Comparison OR Comparison RPAREN

Terminals, with rules where they appear

AND                  : 74
ARRAY                : 12 13 14 15 16
COMMA                : 18 25 30 30 31 32 33 36 46
DIVIDED_BY           : 50
DO                   : 59 61
ELSE                 : 58
END                  : 57 58 59 60 61
EQUAL                : 68
FOR                  : 61
GREATER              : 70
GREATER_EQUAL        : 71
ID                   : 10 11 12 13 14 15 15 16 16 17 18 19 20 20 21 22 23 24 25 26 27 28 29 29 30 30 31 31 32 32 42 45 46 63
IF                   : 57 58
INPUT                : 43
INT                  : 10 11
KEEPS                : 11 14 15 16 19 20 21 22 23 24 25 26
LBRACE               : 57 58 58 59 60 61
LBRACKET             : 14 19 22 24 26 36 37 65 66
LOWER                : 72
LOWER_EQUAL          : 73
LPAREN               : 13 16 18 23 25 26 29 29 30 30 31 31 32 32 45 46 61 68 69 70 71 72 73 74 75
MATRIX               : 17 18 19 20
MINUS                : 28 28 48
NEGATIVE             : 40
NOT                  : 67
NOT_EQUAL            : 69
NUM                  : 39 40
OR                   : 75
OUTPUT               : 62 63 64 65 66
PLUS                 : 27 27 47
RBRACE               : 57 58 58 59 60 61
RBRACKET             : 14 19 22 24 26 36 37 65 66
REMAINDER            : 51
REPEAT               : 60
RPAREN               : 13 16 18 23 25 26 29 29 30 30 31 31 32 32 45 46 61 68 69 70 71 72 73 74 75
SEARCH               : 16 45 46
SEMICOLON            : 61 61
SWAP                 : 29 30 31 32
TEXT                 : 62
TIMES                : 49
UNTIL                : 60
WHILE                : 59
error                : 

Nonterminals, with rules where they appear

Assignment           : 6 8 61 61
Body                 : 2 3 6 7 57 58 58 59 60 61
Comparison           : 57 58 59 60 61 67 74 74 75 75
Declaration          : 4 5
Decls                : 1 2 4
Expression           : 11 16 21 23 23 25 25 25 26 29 29 30 30 30 30 31 31 31 32 32 32 45 46 46 47 47 48 48 49 49 50 50 51 51 68 68 69 69 70 70 71 71 72 72 73 73
For_Do               : 55
If                   : 52
List                 : 14 22 26 33 36 37 65
Matrix               : 19 24 36 66
Num                  : 13 18 18 33 34 41 64
Operation            : 44
Output               : 56
Program              : 0
Repeat_Until         : 54
Statement            : 7 9
While_Do             : 53

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Decls
    (2) Program -> . Decls Body
    (3) Program -> . Body
    (4) Decls -> . Declaration Decls
    (5) Decls -> . Declaration
    (6) Body -> . Assignment Body
    (7) Body -> . Statement Body
    (8) Body -> . Assignment
    (9) Body -> . Statement
    (10) Declaration -> . INT ID
    (11) Declaration -> . INT ID KEEPS Expression
    (12) Declaration -> . ARRAY ID
    (13) Declaration -> . ARRAY ID LPAREN Num RPAREN
    (14) Declaration -> . ARRAY ID KEEPS LBRACKET List RBRACKET
    (15) Declaration -> . ARRAY ID KEEPS ID
    (16) Declaration -> . ARRAY ID KEEPS SEARCH ID LPAREN Expression RPAREN
    (17) Declaration -> . MATRIX ID
    (18) Declaration -> . MATRIX ID LPAREN Num COMMA Num RPAREN
    (19) Declaration -> . MATRIX ID KEEPS LBRACKET Matrix RBRACKET
    (20) Declaration -> . MATRIX ID KEEPS ID
    (21) Assignment -> . ID KEEPS Expression
    (22) Assignment -> . ID KEEPS LBRACKET List RBRACKET
    (23) Assignment -> . ID LPAREN Expression RPAREN KEEPS Expression
    (24) Assignment -> . ID KEEPS LBRACKET Matrix RBRACKET
    (25) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> . ID LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
    (27) Assignment -> . ID PLUS PLUS
    (28) Assignment -> . ID MINUS MINUS
    (29) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (52) Statement -> . If
    (53) Statement -> . While_Do
    (54) Statement -> . Repeat_Until
    (55) Statement -> . For_Do
    (56) Statement -> . Output
    (57) If -> . IF Comparison LBRACE Body RBRACE END
    (58) If -> . IF Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
    (59) While_Do -> . WHILE Comparison DO LBRACE Body RBRACE END
    (60) Repeat_Until -> . REPEAT LBRACE Body RBRACE UNTIL Comparison END
    (61) For_Do -> . FOR LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END
    (62) Output -> . OUTPUT TEXT
    (63) Output -> . OUTPUT ID
    (64) Output -> . OUTPUT Num
    (65) Output -> . OUTPUT LBRACKET List RBRACKET
    (66) Output -> . OUTPUT LBRACKET Matrix RBRACKET

    INT             shift and go to state 7
    ARRAY           shift and go to state 9
    MATRIX          shift and go to state 10
    ID              shift and go to state 8
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    REPEAT          shift and go to state 18
    FOR             shift and go to state 19
    OUTPUT          shift and go to state 20

    Program                        shift and go to state 1
    Decls                          shift and go to state 2
    Body                           shift and go to state 3
    Declaration                    shift and go to state 4
    Assignment                     shift and go to state 5
    Statement                      shift and go to state 6
    If                             shift and go to state 11
    While_Do                       shift and go to state 12
    Repeat_Until                   shift and go to state 13
    For_Do                         shift and go to state 14
    Output                         shift and go to state 15

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Decls .
    (2) Program -> Decls . Body
    (6) Body -> . Assignment Body
    (7) Body -> . Statement Body
    (8) Body -> . Assignment
    (9) Body -> . Statement
    (21) Assignment -> . ID KEEPS Expression
    (22) Assignment -> . ID KEEPS LBRACKET List RBRACKET
    (23) Assignment -> . ID LPAREN Expression RPAREN KEEPS Expression
    (24) Assignment -> . ID KEEPS LBRACKET Matrix RBRACKET
    (25) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> . ID LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
    (27) Assignment -> . ID PLUS PLUS
    (28) Assignment -> . ID MINUS MINUS
    (29) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (52) Statement -> . If
    (53) Statement -> . While_Do
    (54) Statement -> . Repeat_Until
    (55) Statement -> . For_Do
    (56) Statement -> . Output
    (57) If -> . IF Comparison LBRACE Body RBRACE END
    (58) If -> . IF Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
    (59) While_Do -> . WHILE Comparison DO LBRACE Body RBRACE END
    (60) Repeat_Until -> . REPEAT LBRACE Body RBRACE UNTIL Comparison END
    (61) For_Do -> . FOR LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END
    (62) Output -> . OUTPUT TEXT
    (63) Output -> . OUTPUT ID
    (64) Output -> . OUTPUT Num
    (65) Output -> . OUTPUT LBRACKET List RBRACKET
    (66) Output -> . OUTPUT LBRACKET Matrix RBRACKET

    $end            reduce using rule 1 (Program -> Decls .)
    ID              shift and go to state 8
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    REPEAT          shift and go to state 18
    FOR             shift and go to state 19
    OUTPUT          shift and go to state 20

    Body                           shift and go to state 21
    Assignment                     shift and go to state 5
    Statement                      shift and go to state 6
    If                             shift and go to state 11
    While_Do                       shift and go to state 12
    Repeat_Until                   shift and go to state 13
    For_Do                         shift and go to state 14
    Output                         shift and go to state 15

state 3

    (3) Program -> Body .

    $end            reduce using rule 3 (Program -> Body .)


state 4

    (4) Decls -> Declaration . Decls
    (5) Decls -> Declaration .
    (4) Decls -> . Declaration Decls
    (5) Decls -> . Declaration
    (10) Declaration -> . INT ID
    (11) Declaration -> . INT ID KEEPS Expression
    (12) Declaration -> . ARRAY ID
    (13) Declaration -> . ARRAY ID LPAREN Num RPAREN
    (14) Declaration -> . ARRAY ID KEEPS LBRACKET List RBRACKET
    (15) Declaration -> . ARRAY ID KEEPS ID
    (16) Declaration -> . ARRAY ID KEEPS SEARCH ID LPAREN Expression RPAREN
    (17) Declaration -> . MATRIX ID
    (18) Declaration -> . MATRIX ID LPAREN Num COMMA Num RPAREN
    (19) Declaration -> . MATRIX ID KEEPS LBRACKET Matrix RBRACKET
    (20) Declaration -> . MATRIX ID KEEPS ID

    ID              reduce using rule 5 (Decls -> Declaration .)
    IF              reduce using rule 5 (Decls -> Declaration .)
    WHILE           reduce using rule 5 (Decls -> Declaration .)
    REPEAT          reduce using rule 5 (Decls -> Declaration .)
    FOR             reduce using rule 5 (Decls -> Declaration .)
    OUTPUT          reduce using rule 5 (Decls -> Declaration .)
    $end            reduce using rule 5 (Decls -> Declaration .)
    INT             shift and go to state 7
    ARRAY           shift and go to state 9
    MATRIX          shift and go to state 10

    Declaration                    shift and go to state 4
    Decls                          shift and go to state 22

state 5

    (6) Body -> Assignment . Body
    (8) Body -> Assignment .
    (6) Body -> . Assignment Body
    (7) Body -> . Statement Body
    (8) Body -> . Assignment
    (9) Body -> . Statement
    (21) Assignment -> . ID KEEPS Expression
    (22) Assignment -> . ID KEEPS LBRACKET List RBRACKET
    (23) Assignment -> . ID LPAREN Expression RPAREN KEEPS Expression
    (24) Assignment -> . ID KEEPS LBRACKET Matrix RBRACKET
    (25) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> . ID LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
    (27) Assignment -> . ID PLUS PLUS
    (28) Assignment -> . ID MINUS MINUS
    (29) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (52) Statement -> . If
    (53) Statement -> . While_Do
    (54) Statement -> . Repeat_Until
    (55) Statement -> . For_Do
    (56) Statement -> . Output
    (57) If -> . IF Comparison LBRACE Body RBRACE END
    (58) If -> . IF Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
    (59) While_Do -> . WHILE Comparison DO LBRACE Body RBRACE END
    (60) Repeat_Until -> . REPEAT LBRACE Body RBRACE UNTIL Comparison END
    (61) For_Do -> . FOR LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END
    (62) Output -> . OUTPUT TEXT
    (63) Output -> . OUTPUT ID
    (64) Output -> . OUTPUT Num
    (65) Output -> . OUTPUT LBRACKET List RBRACKET
    (66) Output -> . OUTPUT LBRACKET Matrix RBRACKET

    $end            reduce using rule 8 (Body -> Assignment .)
    RBRACE          reduce using rule 8 (Body -> Assignment .)
    ID              shift and go to state 8
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    REPEAT          shift and go to state 18
    FOR             shift and go to state 19
    OUTPUT          shift and go to state 20

    Assignment                     shift and go to state 5
    Body                           shift and go to state 23
    Statement                      shift and go to state 6
    If                             shift and go to state 11
    While_Do                       shift and go to state 12
    Repeat_Until                   shift and go to state 13
    For_Do                         shift and go to state 14
    Output                         shift and go to state 15

state 6

    (7) Body -> Statement . Body
    (9) Body -> Statement .
    (6) Body -> . Assignment Body
    (7) Body -> . Statement Body
    (8) Body -> . Assignment
    (9) Body -> . Statement
    (21) Assignment -> . ID KEEPS Expression
    (22) Assignment -> . ID KEEPS LBRACKET List RBRACKET
    (23) Assignment -> . ID LPAREN Expression RPAREN KEEPS Expression
    (24) Assignment -> . ID KEEPS LBRACKET Matrix RBRACKET
    (25) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> . ID LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
    (27) Assignment -> . ID PLUS PLUS
    (28) Assignment -> . ID MINUS MINUS
    (29) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> . ID LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> . ID LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (52) Statement -> . If
    (53) Statement -> . While_Do
    (54) Statement -> . Repeat_Until
    (55) Statement -> . For_Do
    (56) Statement -> . Output
    (57) If -> . IF Comparison LBRACE Body RBRACE END
    (58) If -> . IF Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
    (59) While_Do -> . WHILE Comparison DO LBRACE Body RBRACE END
    (60) Repeat_Until -> . REPEAT LBRACE Body RBRACE UNTIL Comparison END
    (61) For_Do -> . FOR LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END
    (62) Output -> . OUTPUT TEXT
    (63) Output -> . OUTPUT ID
    (64) Output -> . OUTPUT Num
    (65) Output -> . OUTPUT LBRACKET List RBRACKET
    (66) Output -> . OUTPUT LBRACKET Matrix RBRACKET

    $end            reduce using rule 9 (Body -> Statement .)
    RBRACE          reduce using rule 9 (Body -> Statement .)
    ID              shift and go to state 8
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    REPEAT          shift and go to state 18
    FOR             shift and go to state 19
    OUTPUT          shift and go to state 20

    Statement                      shift and go to state 6
    Body                           shift and go to state 24
    Assignment                     shift and go to state 5
    If                             shift and go to state 11
    While_Do                       shift and go to state 12
    Repeat_Until                   shift and go to state 13
    For_Do                         shift and go to state 14
    Output                         shift and go to state 15

state 7

    (10) Declaration -> INT . ID
    (11) Declaration -> INT . ID KEEPS Expression

    ID              shift and go to state 25


state 8

    (21) Assignment -> ID . KEEPS Expression
    (22) Assignment -> ID . KEEPS LBRACKET List RBRACKET
    (23) Assignment -> ID . LPAREN Expression RPAREN KEEPS Expression
    (24) Assignment -> ID . KEEPS LBRACKET Matrix RBRACKET
    (25) Assignment -> ID . LPAREN Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> ID . LPAREN Expression RPAREN KEEPS LBRACKET List RBRACKET
    (27) Assignment -> ID . PLUS PLUS
    (28) Assignment -> ID . MINUS MINUS
    (29) Assignment -> ID . LPAREN Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> ID . LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> ID . LPAREN Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> ID . LPAREN Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN

    KEEPS           shift and go to state 26
    LPAREN          shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29


state 9

    (12) Declaration -> ARRAY . ID
    (13) Declaration -> ARRAY . ID LPAREN Num RPAREN
    (14) Declaration -> ARRAY . ID KEEPS LBRACKET List RBRACKET
    (15) Declaration -> ARRAY . ID KEEPS ID
    (16) Declaration -> ARRAY . ID KEEPS SEARCH ID LPAREN Expression RPAREN

    ID              shift and go to state 30


state 10

    (17) Declaration -> MATRIX . ID
    (18) Declaration -> MATRIX . ID LPAREN Num COMMA Num RPAREN
    (19) Declaration -> MATRIX . ID KEEPS LBRACKET Matrix RBRACKET
    (20) Declaration -> MATRIX . ID KEEPS ID

    ID              shift and go to state 31


state 11

    (52) Statement -> If .

    ID              reduce using rule 52 (Statement -> If .)
    IF              reduce using rule 52 (Statement -> If .)
    WHILE           reduce using rule 52 (Statement -> If .)
    REPEAT          reduce using rule 52 (Statement -> If .)
    FOR             reduce using rule 52 (Statement -> If .)
    OUTPUT          reduce using rule 52 (Statement -> If .)
    $end            reduce using rule 52 (Statement -> If .)
    RBRACE          reduce using rule 52 (Statement -> If .)


state 12

    (53) Statement -> While_Do .

    ID              reduce using rule 53 (Statement -> While_Do .)
    IF              reduce using rule 53 (Statement -> While_Do .)
    WHILE           reduce using rule 53 (Statement -> While_Do .)
    REPEAT          reduce using rule 53 (Statement -> While_Do .)
    FOR             reduce using rule 53 (Statement -> While_Do .)
    OUTPUT          reduce using rule 53 (Statement -> While_Do .)
    $end            reduce using rule 53 (Statement -> While_Do .)
    RBRACE          reduce using rule 53 (Statement -> While_Do .)


state 13

    (54) Statement -> Repeat_Until .

    ID              reduce using rule 54 (Statement -> Repeat_Until .)
    IF              reduce using rule 54 (Statement -> Repeat_Until .)
    WHILE           reduce using rule 54 (Statement -> Repeat_Until .)
    REPEAT          reduce using rule 54 (Statement -> Repeat_Until .)
    FOR             reduce using rule 54 (Statement -> Repeat_Until .)
    OUTPUT          reduce using rule 54 (Statement -> Repeat_Until .)
    $end            reduce using rule 54 (Statement -> Repeat_Until .)
    RBRACE          reduce using rule 54 (Statement -> Repeat_Until .)


state 14

    (55) Statement -> For_Do .

    ID              reduce using rule 55 (Statement -> For_Do .)
    IF              reduce using rule 55 (Statement -> For_Do .)
    WHILE           reduce using rule 55 (Statement -> For_Do .)
    REPEAT          reduce using rule 55 (Statement -> For_Do .)
    FOR             reduce using rule 55 (Statement -> For_Do .)
    OUTPUT          reduce using rule 55 (Statement -> For_Do .)
    $end            reduce using rule 55 (Statement -> For_Do .)
    RBRACE          reduce using rule 55 (Statement -> For_Do .)


state 15

    (56) Statement -> Output .

    ID              reduce using rule 56 (Statement -> Output .)
    IF              reduce using rule 56 (Statement -> Output .)
    WHILE           reduce using rule 56 (Statement -> Output .)
    REPEAT          reduce using rule 56 (Statement -> Output .)
    FOR             reduce using rule 56 (Statement -> Output .)
    OUTPUT          reduce using rule 56 (Statement -> Output .)
    $end            reduce using rule 56 (Statement -> Output .)
    RBRACE          reduce using rule 56 (Statement -> Output .)


state 16

    (57) If -> IF . Comparison LBRACE Body RBRACE END
    (58) If -> IF . Comparison LBRACE Body RBRACE ELSE LBRACE Body RBRACE END
    (67) Comparison -> . NOT Comparison
    (68) Comparison -> . LPAREN Expression EQUAL Expression RPAREN
    (69) Comparison -> . LPAREN Expression NOT_EQUAL Expression RPAREN
    (70) Comparison -> . LPAREN Expression GREATER Expression RPAREN
    (71) Comparison -> . LPAREN Expression GREATER_EQUAL Expression RPAREN
    (72) Comparison -> . LPAREN Expression LOWER Expression RPAREN
    (73) Comparison -> . LPAREN Expression LOWER_EQUAL Expression RPAREN
    (74) Comparison -> . LPAREN Comparison AND Comparison RPAREN
    (75) Comparison -> . LPAREN Comparison OR Comparison RPAREN

    NOT             shift and go to state 33
    LPAREN          shift and go to state 34

    Comparison                     shift and go to state 32

state 17

    (59) While_Do -> WHILE . Comparison DO LBRACE Body RBRACE END
    (67) Comparison -> . NOT Comparison
    (68) Comparison -> . LPAREN Expression EQUAL Expression RPAREN
    (69) Comparison -> . LPAREN Expression NOT_EQUAL Expression RPAREN
    (70) Comparison -> . LPAREN Expression GREATER Expression RPAREN
    (71) Comparison -> . LPAREN Expression GREATER_EQUAL Expression RPAREN
    (72) Comparison -> . LPAREN Expression LOWER Expression RPAREN
    (73) Comparison -> . LPAREN Expression LOWER_EQUAL Expression RPAREN
    (74) Comparison -> . LPAREN Comparison AND Comparison RPAREN
    (75) Comparison -> . LPAREN Comparison OR Comparison RPAREN

    NOT             shift and go to state 33
    LPAREN          shift and go to state 34

    Comparison                     shift and go to state 35

state 18

    (60) Repeat_Until -> REPEAT . LBRACE Body RBRACE UNTIL Comparison END

    LBRACE          shift and go to state 36


state 19

    (61) For_Do -> FOR . LPAREN Assignment SEMICOLON Comparison SEMICOLON Assignment RPAREN DO LBRACE Body RBRACE END

    LPAREN          shift and go to state 37


state 20

    (62) Output -> OUTPUT . TEXT
    (63) Output -> OUTPUT . ID
    (64) Output -> OUTPUT . Num
    (65) Output -> OUTPUT . LBRACKET List RBRACKET
    (66) Output -> OUTPUT . LBRACKET Matrix RBRACKET
    (39) Num -> . NUM
    (40) Num -> . NEGATIVE NUM

    TEXT            shift and go to state 38
    ID              shift and go to state 39
    LBRACKET        shift and go to state 41
    NUM             shift and go to state 42
    NEGATIVE        shift and go to state 43

    Num                            shift and go to state 40

state 21

    (2) Program -> Decls Body .

    $end            reduce using rule 2 (Program -> Decls Body .)


state 22

    (4) Decls -> Declaration Decls .

    ID              reduce using rule 4 (Decls -> Declaration Decls .)
    IF              reduce using rule 4 (Decls -> Declaration Decls .)
    WHILE           reduce using rule 4 (Decls -> Declaration Decls .)
    REPEAT          reduce using rule 4 (Decls -> Declaration Decls .)
    FOR             reduce using rule 4 (Decls -> Declaration Decls .)
    OUTPUT          reduce using rule 4 (Decls -> Declaration Decls .)
    $end            reduce using rule 4 (Decls -> Declaration Decls .)


state 23

    (6) Body -> Assignment Body .

    $end            reduce using rule 6 (Body -> Assignment Body .)
    RBRACE          reduce using rule 6 (Body -> Assignment Body .)


state 24

    (7) Body -> Statement Body .

    $end            reduce using rule 7 (Body -> Statement Body .)
    RBRACE          reduce using rule 7 (Body -> Statement Body .)


state 25

    (10) Declaration -> INT ID .
    (11) Declaration -> INT ID . KEEPS Expression

    INT             reduce using rule 10 (Declaration -> INT ID .)
    ARRAY           reduce using rule 10 (Declaration -> INT ID .)
    MATRIX          reduce using rule 10 (Declaration -> INT ID .)
    ID              reduce using rule 10 (Declaration -> INT ID .)
    IF              reduce using rule 10 (Declaration -> INT ID .)
    WHILE           reduce using rule 10 (Declaration -> INT ID .)
    REPEAT          reduce using rule 10 (Declaration -> INT ID .)
    FOR             reduce using rule 10 (Declaration -> INT ID .)
    OUTPUT          reduce using rule 10 (Declaration -> INT ID .)
    $end            reduce using rule 10 (Declaration -> INT ID .)
    KEEPS           shift and go to state 44


state 26

    (21) Assignment -> ID KEEPS . Expression
    (22) Assignment -> ID KEEPS . LBRACKET List RBRACKET
    (24) Assignment -> ID KEEPS . LBRACKET Matrix RBRACKET
    (41) Expression -> . Num
    (42) Expression -> . ID
    (43) Expression -> . INPUT
    (44) Expression -> . Operation
    (45) Expression -> . SEARCH ID LPAREN Expression RPAREN
    (46) Expression -> . SEARCH ID LPAREN Expression COMMA Expression RPAREN
    (39) Num -> . NUM
    (40) Num -> . NEGATIVE NUM
    (47) Operation -> . Expression PLUS Expression
    (48) Operation -> . Expression MINUS Expression
    (49) Operation -> . Expression TIMES Expression
    (50) Operation -> . Expression DIVIDED_BY Expression
    (51) Operation -> . Expression REMAINDER Expression

    LBRACKET        shift and go to state 47
    ID              shift and go to state 45
    INPUT           shift and go to state 49
    SEARCH          shift and go to state 51
    NUM             shift and go to state 42
    NEGATIVE        shift and go to state 43

    Expression                     shift and go to state 46
    Num                            shift and go to state 48
    Operation                      shift and go to state 50

state 27

    (23) Assignment -> ID LPAREN . Expression RPAREN KEEPS Expression
    (25) Assignment -> ID LPAREN . Expression COMMA Expression RPAREN KEEPS Expression
    (26) Assignment -> ID LPAREN . Expression RPAREN KEEPS LBRACKET List RBRACKET
    (29) Assignment -> ID LPAREN . Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (30) Assignment -> ID LPAREN . Expression COMMA Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (31) Assignment -> ID LPAREN . Expression RPAREN SWAP ID LPAREN Expression COMMA Expression RPAREN
    (32) Assignment -> ID LPAREN . Expression COMMA Expression RPAREN SWAP ID LPAREN Expression RPAREN
    (41) Expression -> . Num
    (42) Expression -> . ID
    (43) Expression -> . INPUT
    (44) Expression -> . Operation
    (45) Expression -> . SEARCH ID LPAREN Expression RPAREN
    (46) Expression -> . SEARCH ID LPAREN Expression COMMA Expression RPAREN
    (39) Num -> . NUM
    (40) Num -> . NEGATIVE NUM
    (47) Operation -> . Expression PLUS Expression
    (48) Operation -> . Expression MINUS Expression
    (49) Operation -> . Expression TIMES Expression
    (50) Operation -> . Expression DIVIDED_BY Expression
    (51) Operation -> . Expression REMAINDER Expression

    ID              shift and go to state 45
    INPUT           shift and go to state 49
    SEARCH          shift and go to state 51
    NUM             shift and go to state 42
    NEGATIVE        shift and go to state 43

    Expression                     shift and go to state 52
    Num                            shift and go to state 48
    Operation                      shift and go to state 50

state 28

    (27) Assignment -> ID PLUS . PLUS

    PLUS            shift and go to state 53


state 29

    (28) Assignment -> ID MINUS . MINUS

    MINUS           shift and go to state 54


state 30

    (12) Declaration -> ARRAY ID .
    (13) Declaration -> ARRAY ID . LPAREN Num RPAREN
    (14) Declaration -> ARRAY ID . KEEPS LBRACKET List RBRACKET
    (15) Declaration -> ARRAY ID . KEEPS ID
    (16) Declaration -> ARRAY ID . KEEPS SEARCH ID LPAREN Expression RPAREN
